Fixed: KaTex display bug (#185)
* Fixed: the problem that LaTex always has

* Updated: showing the scrollbar or not can be configured

* Fixed: wrapped katex-display span and changed the target of css onto the
div that wraps the span.

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -375,3 +375,9 @@ img
       iframe
         width: $content-large-width
         height: $iframe-large-height
+
+.katex-wrap
+  overflow: auto
+  if hexo-config("katex") && hexo-config("katex.hide_scrollbar")
+    &::-webkit-scrollbar
+      display: none
